kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: raspberry
  labels:
    name: raspberry
